--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 			<div class="rightmenu">
 				<ul>
-					<li><a href="Index.html">Home </a></li>
+					<li><a href="index.html">Home </a></li>
 					<li><a href="aboutus.html">About Us </a></li>
 					<li><a href="FAQ.html">Faq </a></li>
 					<li><a href="Form.html">DriverSign </a></li>
